--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main class="px-3">
     <h1>Cubra a sua capa</h1>
     <p class="lead"></p>
-    <p class="lead">A capa é um modelo de uma página para construir páginas iniciais simples e bonitas
+    <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Saber mais</a>
     </p>
   </main>
